--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,13 +3,13 @@
  }
 
  body {
- 	width: 75%;
+ 	width: 65%;
 	margin: 0 auto; 
 
 	display: flex;
-	min-height: 100vh;
+	min-height: 90vh;
 	flex-direction: column;
-	background-color: white;
+	background-color: orange;
  }
 
  #cute_burger {
@@ -20,8 +20,8 @@
  h1 {
  	text-align: center;
  	font-family: 'Fontdiner Swanky', cursive;
- 	font-size: 65px;
- 	margin: 50px;
+ 	font-size: 70px;
+ 	margin: 55px;
  }
 
  .burgerAvailable {
