--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,7 +9,7 @@
 	display: flex;
 	min-height: 90vh;
 	flex-direction: column;
-	background-color: black;
+	background-color: pink;
  }
 
  #cute_burger {
